Update SkillsTable.java